--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,10 @@
 
 }
 
+.galeria__item{
+    position: relative;
+    overflow: hidden;
+}
 
 
 .galeriacafeteria__img{
@@ -195,6 +199,104 @@
     grid-column:span 4;
     grid-row: span 2; 
 }
+
+/*--=====================================
+=          GALERÍA DE LA PANADERIA    =
+========================================*/
+
+.galeriapanaderia{
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    align-items: stretch;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-columns: 300px;
+    justify-self: center;
+    justify-content: center;
+    gap: 1rem;
+    
+
+}
+
+
+.galeriapanaderia__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.galeriapanaderia__item--1{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapanaderia__item--2{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapanaderia__item--3{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapanaderia__item--4{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapanaderia__item--5{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapanaderia__item--6{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+.galeriapanaderia__item--7{
+    grid-column:span 1;
+    grid-row: span 2; 
+}
+.galeriapanaderia__item--8{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+
+
+
+
+/*--=====================================
+=                 OVERLAY               =
+========================================*/
+.galeria__overlay{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    transform: translateY(100%);
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: transform 0.5s ease;
+
+}
+
+.galeria__text{
+    width: 100%;
+    color:white;
+    text-align: center;
+}
+
+.galeria__item:hover .galeria__overlay {
+    transform: translateY(0%);
+}
+
+
+
 
 /*--=====================================
 =         RESPONSIVE CAFETERIA          =
