--- a/css/index.css
+++ b/css/index.css
@@ -310,3 +310,46 @@
 
 
 
+/*--=====================================
+=                 FOOTER                =
+========================================*/
+
+.contenedor-footer{
+    width: 100vw;
+    padding: 50px;
+    display: grid;
+    align-items: stretch;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-columns: 300px;
+    justify-self: center;
+    justify-content: center;
+    gap: 5rem;
+    background-color: rgb(175, 200, 177);
+    font-family: "Arsenal SC", sans-serif;
+    
+
+}
+
+.contenido-footer h5{
+
+    text-align: center;
+    margin-bottom: 20px;
+    
+}
+
+.contacto{
+    text-align: center;
+}
+
+.redes{
+    grid-column:span 3;
+    text-align: center;
+}
+
+.icon-redes a{
+    text-decoration: none;
+    color: black;
+    font-size: 40px;
+    padding: 10px;
+    
+}
