--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,127 @@
     grid-row: span 2; 
 }
 
+/*--=====================================
+=          GALERÍA DE PASTELERIA        =
+========================================*/
+
+.galeriapasteleria{
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    align-items: stretch;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-columns: 300px;
+    justify-self: center;
+    justify-content: center;
+    gap: 1rem;
+    
+
+}
+
+
+.galeriapasteleria__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.galeriapasteleria__item--1{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriapasteleria__item--2{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriapasteleria__item--3{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriapasteleria__item--4{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriapasteleria__item--5{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriapasteleria__item--6{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+.galeriapasteleria__item--7{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+
+
+/*--=====================================
+=          GALERÍA DE LA BRUNCH    =
+========================================*/
+
+.galeriabruch{
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    align-items: stretch;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-columns: 300px;
+    justify-self: center;
+    justify-content: center;
+    gap: 1rem;
+    
+
+}
+
+
+.galeriabruch__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.galeriabruch__item--1{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriabruch__item--2{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+.galeriabruch__item--3{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriabruch__item--4{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriabruch__item--5{
+    grid-column:span 2;
+    grid-row: span 2; 
+}
+
+.galeriabruch__item--6{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+.galeriabruch__item--7{
+    grid-column:span 3;
+    grid-row: span 2; 
+}
+
+
 
 
 
