--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,6 @@
     border: 0;
     margin: 0;
     box-sizing: border-box;
-    
-
 }
 
 /*--==================================================================================================================
@@ -31,7 +29,6 @@
     width: 150px;    
 }
 
-
 .recuadro-inferior{
     background-color: rgb(175, 200, 177);
     margin-top: 0;
@@ -52,16 +49,15 @@
     padding-top: 30px;
 }
 
-
 /*--==================================================================================================================
 =                                                   GALERÍA DEL HOME                                                 =
 ===================================================================================================================--*/
+
 .titulo{
     padding-bottom: 30px;
     text-align: center;
     font-family: "Paytone One", sans-serif;
     color:  rgb(220, 185, 148);
-    
 }
 
 .galeriahome{
@@ -112,121 +108,20 @@
     transform: scale(1.2, 1.1);
 }
 
-/*--=====================================
-=           CONTENEDOR INFERIOR         =
-========================================*/
+
+/*--==================================================================================================================
+=                                                   CONTENEDOR INFERIOR                                              =
+===================================================================================================================--*/
+
 .container-inferior{
     display: grid;
     justify-items: end;
     padding:0px 20px 50px;
 }
 
-/*--=====================================
-=            RESPONSIVE HOME            =
-========================================*/
-@media(max-width: 1200px){
-    footer{
-        font-family: "Arsenal SC", sans-serif;
-        font-style: normal;
-        background-color: rgb(175, 200, 177);
-    }
-    
-    .container-footer{
-        grid-column:span 3;    
-        font-family: "Arsenal SC", sans-serif; 
-    }
-    
-    .card-body{
-        margin: 20px;
-    }
-    
-    .redes{
-        grid-column:span 3;
-        text-align: center;
-    }
-    
-    .icon-redes a{
-        text-decoration: none;
-        color: black;
-        font-size: 40px;
-        padding: 10px;
-    }
-
-}
-/*--=======================================================================================================*/
-
-@media(max-width: 1024px){
-    .galeriahome{
-        margin: 30px;
-    }    
-    footer{
-        margin:auto;
-    }
-}
-/*--=======================================================================================================*/
-@media(max-width: 992px){
-
-    .img-logo{
-        width: 100px;        
-    }
-
-    .align-items-start{
-        padding-right: 8px;
-    }
-
-    .titulo{
-        padding-bottom: 5px;
-    }
-}
-/*--=======================================================================================================*/
-@media(max-width: 768px){
-    .galeriahome{
-        
-        margin: 30px;
-        grid-template-columns: repeat(3, 1fr);   
-    }     
-    .galeriahome__item--2{
-        grid-column:span 1;
-        grid-row: span 2;    
-    } 
-
-
-    .col{
-        grid-column:span 3;  
-    }
-    .contenedor-desplegable{
-        margin:12px;
-    }
-}
-/*--=======================================================================================================*/
-@media(max-width: 576px){
-
-    .recuadro-superior{
-        height: 50px;    
-    }
-    .img-logo{
-        width: 80px;    
-    }
-    .card {
-        font-size: 10px;
-    }
-    .card-body{
-        width: 120px;
-    }
-    .col{
-        padding: 0px;
-    }
-    .row.align-items-start{
-        margin:0px;
-        padding: 0px;  
-    }
-
-}
-
-
-/*--=====================================
-=          GALERÍA DE LA CAFETERÍA    =
-========================================*/
+/*--==================================================================================================================
+=                                                   GALERÍA DE LA CAFETERÍA                                          =
+===================================================================================================================--*/
 
 .galeriacafeteria{
     max-width: 1100px;
@@ -238,7 +133,6 @@
     justify-self: center;
     justify-content: center;
     gap: 1rem;
-    
 
 }
 
@@ -294,9 +188,9 @@
     grid-row: span 2; 
 }
 
-/*--=====================================
-=          GALERÍA DE LA PANADERIA    =
-========================================*/
+/*--==================================================================================================================
+=                                                   GALERÍA DE LA PANADERIA                                          =
+===================================================================================================================--*/
 
 .galeriapanaderia{
     max-width: 1100px;
@@ -308,10 +202,7 @@
     justify-self: center;
     justify-content: center;
     gap: 1rem;
-    
-
 }
-
 
 .galeriapanaderia__img{
     width: 100%;
@@ -357,9 +248,9 @@
     grid-row: span 2; 
 }
 
-/*--=====================================
-=          GALERÍA DE PASTELERIA        =
-========================================*/
+/*--==================================================================================================================
+=                                                   GALERÍA DE LA PASTELERIA                                         =
+===================================================================================================================--*/
 
 .galeriapasteleria{
     max-width: 1100px;
@@ -371,10 +262,7 @@
     justify-self: center;
     justify-content: center;
     gap: 1rem;
-    
-
 }
-
 
 .galeriapasteleria__img{
     width: 100%;
@@ -416,11 +304,9 @@
     grid-row: span 2; 
 }
 
-
-
-/*--=====================================
-=          GALERÍA DE LA BRUNCH    =
-========================================*/
+/*--==================================================================================================================
+=                                                   GALERÍA DEl BRUNCH                                              =
+===================================================================================================================--*/
 
 .galeriabruch{
     max-width: 1100px;
@@ -432,10 +318,7 @@
     justify-self: center;
     justify-content: center;
     gap: 1rem;
-    
-
 }
-
 
 .galeriabruch__img{
     width: 100%;
@@ -477,14 +360,10 @@
     grid-row: span 2; 
 }
 
+/*--==================================================================================================================
+=                                                   OVERLAY                                                          =
+===================================================================================================================--*/
 
-
-
-
-
-/*--=====================================
-=                 OVERLAY               =
-========================================*/
 .galeria__overlay{
     position: absolute;
     display: flex;
@@ -497,7 +376,6 @@
     transform: translateY(100%);
     background-color: rgba(0, 0, 0, 0.5);
     transition: transform 0.5s ease;
-
 }
 
 .galeria__text{
@@ -510,24 +388,125 @@
     transform: translateY(0%);
 }
 
+/*--==================================================================================================================
+=                                                   RESPONSIVE HOME                                                  =
+===================================================================================================================--*/
 
+@media(max-width: 1200px){
+    footer{
+        font-family: "Arsenal SC", sans-serif;
+        font-style: normal;
+        background-color: rgb(175, 200, 177);
+    }
+    
+    .container-footer{
+        grid-column:span 3;    
+        font-family: "Arsenal SC", sans-serif; 
+    }
+    
+    .card-body{
+        margin: 20px;
+    }
+    
+    .redes{
+        grid-column:span 3;
+        text-align: center;
+    }
+    
+    .icon-redes a{
+        text-decoration: none;
+        color: black;
+        font-size: 40px;
+        padding: 10px;
+    }
+}
 
+/*--=======================================================================================================*/
 
-/*--=====================================
-=         RESPONSIVE CAFETERIA          =
-========================================*/
+@media(max-width: 1024px){
+    .galeriahome{
+        margin: 30px;
+    }    
+    footer{
+        margin:auto;
+    }
+}
+/*--=======================================================================================================*/
+
+@media(max-width: 992px){
+
+    .img-logo{
+        width: 100px;        
+    }
+
+    .align-items-start{
+        padding-right: 8px;
+    }
+
+    .titulo{
+        padding-bottom: 5px;
+    }
+}
+
+/*--=======================================================================================================*/
+
+@media(max-width: 768px){
+    .galeriahome{
+        
+        margin: 30px;
+        grid-template-columns: repeat(3, 1fr);   
+    }     
+    .galeriahome__item--2{
+        grid-column:span 1;
+        grid-row: span 2;    
+    } 
+
+    .col{
+        grid-column:span 3;  
+    }
+    .contenedor-desplegable{
+        margin:12px;
+    }
+}
+
+/*--=======================================================================================================*/
+@media(max-width: 576px){
+
+    .recuadro-superior{
+        height: 50px;    
+    }
+    .img-logo{
+        width: 80px;    
+    }
+    .card {
+        font-size: 10px;
+    }
+    .card-body{
+        width: 120px;
+    }
+    .col{
+        padding: 0px;
+    }
+    .row.align-items-start{
+        margin:0px;
+        padding: 0px;  
+    }
+}
+
+/*--==================================================================================================================
+=                                                   RESPONSIVE CAFETERIA                                             =
+===================================================================================================================--*/
+
 @media(max-width: 1200px){
     .galeriacafeteria{
-        
         margin: 30px;
     }    
 }
 
-
-
 /*--==================================================================================================================
 =                                                   FOOTER                                                           =
 ===================================================================================================================--*/
+
 footer{
     font-family: "Arsenal SC", sans-serif;
     font-style: normal;
